[metadata]
name = genno
author = genno contributors
author_email = mail@paul.kishimoto.name
license = GPLv3
description = Efficient, transparent calculation on N-D data
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = genno
include_package_data = True
install_requires =
    setuptools >= 41
setup_requires =
    setuptools >= 41
    setuptools_scm

[flake8]
max-line-length = 88
ignore =
    # line break before binary operator
    W503
